--- a/css/about-custom.css
+++ b/css/about-custom.css
@@ -1,3 +1,7 @@
+        :root {
+            --bg-color: #c58723;
+        }
+
         .logo-image {
             width: 100%;
             height: 65px;
@@ -110,7 +114,7 @@
         }
 
         #page_header {
-            background: url(images/About-Banner.jpg) no-repeat;
+            background: url(../rajeshimedia/aboutbanner.png) no-repeat;
             width: 100%;
             position: relative;
             min-height: 315px;
@@ -118,6 +122,7 @@
             background-position: center center;
             text-align: right;
         }
+
         * {
             box-sizing: border-box;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -141,10 +146,9 @@
             padding-bottom: 3rem !important;
         }
 
-        h5.sub-title {
-            color: #e25111;
-            font-size: 24px;
-            margin-bottom: 8px;
+        .w3l-testimonials .sub-title {
+            color: #c58723;
+            font-weight: 600;
         }
 
         .mb-2 {
@@ -630,19 +634,7 @@
             border-radius: 50%;
         }
 
-        button.owl-next,
-        button.owl-prev {
-            position: absolute;
-            bottom: 50%;
-        }
-
-        button.owl-prev {
-            left: 10px;
-        }
-
-        button.owl-next {
-            right: 10px;
-        }
+        /* Old nav styles removed, see bottom of file */
 
         .owl-theme .owl-dots .owl-dot.active span,
         .owl-theme .owl-dots .owl-dot:hover span {
@@ -651,7 +643,7 @@
 
         /*--//owl-slider--*/
         .w3l-testimonials .cusrtomer-layout {
-            background: url(images/Testimonial.jpg) no-repeat center;
+            background: url(../rajeshimedia/abouttestimonials.png) no-repeat center !important;
             -ms-background-size: cover;
             background-size: cover;
             z-index: 0;
@@ -664,7 +656,7 @@
 
         .w3l-testimonials .cusrtomer-layout::before {
             content: "";
-            background: rgb(0 0 0 / 40%);
+            background: rgb(0 0 0 / 80%);
             ;
             position: absolute;
             top: 0;
@@ -688,16 +680,18 @@
 
         .w3l-testimonials .testimonial {
             display: block;
-            padding: 50px 34px 80px 20px;
+            padding: 30px;
             position: relative;
             border: none;
+            background: transparent;
+            text-align: center;
         }
 
         .w3l-testimonials blockquote q {
             font-size: 17px;
             line-height: 28px;
             color: #fff;
-            font-weight: 600;
+            font-weight: 500;
         }
 
         .w3l-testimonials blockquote q::before {
@@ -758,7 +752,7 @@
         }
 
         .testimonial i.fas.fa-quote-right {
-            color: #f50537;
+            color: #fff;
             font-size: 60px;
             margin-bottom: 20px;
             display: block;
@@ -767,8 +761,8 @@
         .w3l-testimonials .testimonial .peopl h3 {
             margin: 0;
             font-weight: 700;
-            font-size: 22px;
-            color: #ffa700;
+            font-size: 20px;
+            color: var(--bg-color);
             text-transform: uppercase;
         }
 
@@ -830,8 +824,9 @@
             margin-top: 2.5rem
         }
 
-        .py-5 {
-            padding-top: 10rem !important;
+        /* Scoped padding for testimonials to avoid global conflicts and reduce height */
+        .w3l-testimonials .py-5 {
+            padding-top: 5rem !important;
             padding-bottom: 3rem !important;
         }
 
@@ -841,6 +836,50 @@
 
         .copy-section {
             background-color: #c58723;
+        }
+
+        /*--//owl-slider--*/
+        button.owl-next,
+        button.owl-prev {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 40px;
+            height: 40px;
+            background: rgba(255, 255, 255, 0.2) !important;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: 0.3s ease;
+        }
+
+        button.owl-prev:hover,
+        button.owl-next:hover {
+            background: rgba(255, 255, 255, 0.5) !important;
+        }
+
+        button.owl-prev {
+            left: -10px;
+        }
+
+        button.owl-next {
+            right: -10px;
+        }
+
+        button.owl-prev span,
+        button.owl-next span {
+            font-size: 30px;
+            color: #fff;
+            line-height: 1;
+        }
+
+        .owl-two.owl-carousel.owl-theme .owl-dots {
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: -30px;
+            text-align: center;
         }
 
         .w3l-footer-16 h3 {
