--- a/css/footer.css
+++ b/css/footer.css
@@ -185,3 +185,29 @@ footer p {
     bottom: 0;
     transition: transform 1.5s ease-out, opacity 1.5s ease-out;
 }
+
+/* WhatsApp Floating Button */
+.whatsapp-float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 25px;
+    right: 25px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 10000;
+}
+
+.my-float {
+    margin-top: 16px;
+}
+
+/* Align Back-Top Button with WhatsApp Button */
+#back-top {
+    bottom: 100px !important;
+    right: 35px !important;
+}
