--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,10 @@
 /* Standardized Footer Styles */
 .footer-top-16 {
-    background-color: #c58723;
+    background-color: #f5cc35;
 }
 
 .copy-section {
-    background-color: #c58723;
+    background-color: #f5cc35;
 }
 
 .w3l-footer-16 h3 {
