--- a/css/menu-custom.css
+++ b/css/menu-custom.css
@@ -46,7 +46,7 @@
 
 .service-item .service-content-icon h4 {
     transition: 1s;
-    color: #c58723;
+    color: #f5cc35;
     /* Original gold/bronze color for text */
     font-weight: bold;
     margin-bottom: 1rem;
